<resources>
    <string name="app_name">Proyecto_bitcoin</string>
    <string name="txt_max_price">Amount Max: </string>
    <string name="txt_min_price">Amount Min: </string>
    <string name="txt_ask">Ask</string>
    <string name="txt_bind">Bind</string>
    <string name="txt_book">Book:</string>
    <string name="txt_price">Price:</string>
    <string name="txt_amount">Amount:</string>
    <string name="txt_type">Type: </string>
    <string name="txt_list">Lista de Bitcoin</string>
    <string name="txt_description">Description</string>
    <string name="txt_value">100.00</string>
</resources>